Use 'My' instead of 'Your' for menu and title pages

--- a/modules/reference/nav-reference-manual.adoc
+++ b/modules/reference/nav-reference-manual.adoc
@@ -20,13 +20,13 @@ ifndef::backend-pdf[]
 **** xref:home/home-notification-messages.adoc[Notification Messages]
 // User Account
 **** xref:home/user-account-menu.adoc[User Account Menu]
-***** xref:home/user-account-your-account.adoc[Your Account]
+***** xref:home/user-account-your-account.adoc[My Account]
 ***** xref:home/user-account-addresses.adoc[Addresses]
 ***** xref:home/user-account-change-email.adoc[Change Email]
 ***** xref:home/user-account-account-deactivation.adoc[Account Deactivation]
-**** xref:home/home-your-preferences.adoc[Your Preferences]
-// Your Organization
-**** xref:home/your-organization-menu.adoc[Your Organization]
+**** xref:home/home-your-preferences.adoc[My Preferences]
+// My Organization
+**** xref:home/your-organization-menu.adoc[My Organization]
 ***** xref:home/your-organization-configuration.adoc[Configuration]
 ***** xref:home/your-organization-trusts.adoc[Organization Trusts]
 ***** xref:home/your-organization-configuration-channels.adoc[Configuration Channels]
@@ -270,7 +270,7 @@ include::modules/reference/pages/home/user-account-account-deactivation.adoc[lev
 
 include::modules/reference/pages/home/home-your-preferences.adoc[leveloffset=+3]
 
-// Your Organization
+// My Organization
 include::modules/reference/pages/home/your-organization-menu.adoc[leveloffset=+2]
 
 include::modules/reference/pages/home/your-organization-configuration.adoc[leveloffset=+3]
