--- a/modules/reference/pages/home/home-your-preferences.adoc
+++ b/modules/reference/pages/home/home-your-preferences.adoc
@@ -1,5 +1,5 @@
 [[ref.webui.overview.prefs]]
-= Your Preferences
+= My Preferences
 
 The menu:Main Menu[Home > YourPreferences] page allows you to configure {productname} options.
 
