--- a/modules/reference/pages/home/user-account-your-account.adoc
+++ b/modules/reference/pages/home/user-account-your-account.adoc
@@ -1,7 +1,7 @@
 [[ref.webui.overview.account]]
-= Your Account
+= My Account
 
-Modify your personal information, such as name, password, and title from the menu:Main Menu[Home > User Account > Your Account] page.
+Modify your personal information, such as name, password, and title from the menu:Main Menu[Home > User Account > My Account] page.
 To modify this information, make the changes in the appropriate text fields and click the btn:[Update] button at the bottom.
 
 image::home_user_account_user_details.png[scaledwidth=80%]
