--- a/modules/reference/pages/navigation/categories-and-pages.adoc
+++ b/modules/reference/pages/navigation/categories-and-pages.adoc
@@ -13,11 +13,11 @@ menu:Overview[]::
 Obtain a quick overview of your account.
 This page notifies you if your systems need attention, provides a quick link directly to these systems, displays the most recent patch alerts for your account, and recently registered systems.
 
-menu:Your Account[]::
+menu:My Account[]::
 Update your personal profile, addresses, email, and credentials.
 Deactivate your account.
 
-menu:Your Preferences[]::
+menu:My Preferences[]::
 Indicate if you wish to receive email notifications about available patches for your systems.
 Set how many items are displayed in system and group lists.
 Set contents of the overview start page.
@@ -28,7 +28,7 @@ menu:Locale Preferences[]::
 Configure timezone.
 
 
-menu:Your Organization[]::
+menu:My Organization[]::
 Update organization configuration and display organization trusts.
 
 
