--- a/modules/reference/pages/patches/patches-menu.adoc
+++ b/modules/reference/pages/patches/patches-menu.adoc
@@ -8,7 +8,7 @@ The menu:Main Menu[Patches > Patches] page displays all or relevant patches for 
 .Receiving Patches for Your System
 [NOTE]
 ====
-To receive an e-mail when patches are issued for your system, go to menu:Main Menu[Home > Your Preferences] and select [guimenu]``Receive email notifications``.
+To receive an e-mail when patches are issued for your system, go to menu:Main Menu[Home > My Preferences] and select [guimenu]``Receive email notifications``.
 ====
 
 {suse} distinguishes three types of patches: security updates, bug fix updates, and enhancement updates.
