--- a/modules/reference/pages/systems/system-details/sd-properties.adoc
+++ b/modules/reference/pages/systems/system-details/sd-properties.adoc
@@ -25,7 +25,7 @@ Anytime an update is released for the system, you receive an e-mail notification
 +
 
 The daily summary reports system events that affect packages, such as scheduled patch updates, system reboots, or failures to check in.
-In addition to including the system here, you must activate to receive e-mail notification in menu:Main Menu[Home > Overview > Your Preferences].
+In addition to including the system here, you must activate to receive e-mail notification in menu:Main Menu[Home > Overview > My Preferences].
 
 Contact Method:::
 Select one of the following contact methods:
