--- a/modules/reference/pages/home/home-overview.adoc
+++ b/modules/reference/pages/home/home-overview.adoc
@@ -7,7 +7,7 @@ Entering the {productname} URL in a browser leads you to the [guimenu]``Sign In`
 
 Before logging in, select [guimenu]``About``, to browse and search for available documentation topics.
 You may reset your username and password from the menu:About[Lookup Login/Password] page.
-Refer to xref:reference:home/user-account-your-account.adoc[Your Account] for more information.
+Refer to xref:reference:home/user-account-your-account.adoc[My Account] for more information.
 
 
 [NOTE]
@@ -20,8 +20,8 @@ Login to the {productname} {webui} to view the menu:Main Menu[Home > Overview] p
 The Overview page contains summary panes that provide important information about your systems.
 
 [guimenu]``Overview`` is split into functional sections, with the most critical sections displayed first.
-Users can control which of the following sections are displayed by making selections on the menu:Main Menu[Home > Your Preferences] page.
-Refer to xref:reference:home/home-your-preferences.adoc[Your Preferences] for more information.
+Users can control which of the following sections are displayed by making selections on the menu:Main Menu[Home > My Preferences] page.
+Refer to xref:reference:home/home-your-preferences.adoc[My Preferences] for more information.
 
 image::home_overview.png[scaledwidth=80%]
 
