--- a/modules/reference/pages/home/your-organization-menu.adoc
+++ b/modules/reference/pages/home/your-organization-menu.adoc
@@ -1,7 +1,7 @@
 [[ref.webui.overview.org]]
-= Your Organization Menu
+= My Organization Menu
 
-From the menu:Main Menu[Home > Your Organization] page you can view the following pages:
+From the menu:Main Menu[Home > My Organization] page you can view the following pages:
 
 * xref:reference:home/your-organization-configuration.adoc[Configuration]
 
