--- a/modules/reference/pages/home/your-organization-trusts.adoc
+++ b/modules/reference/pages/home/your-organization-trusts.adoc
@@ -1,7 +1,7 @@
 [[ref.webui.overview.org.trust]]
 = Ogranization Trusts
 
-The menu:Main Menu[Home > Your Organization > Organization Trusts] page displays the trusts established with your organization (that is, the organization with which you, the logged-in user, are associated).
+The menu:Main Menu[Home > My Organization > Organization Trusts] page displays the trusts established with your organization (that is, the organization with which you, the logged-in user, are associated).
 The page also lists [guimenu]``Channels Shared``, which refers to channels available to your organization via others in the established trusts.
 
 
