--- a/modules/administration/pages/icinga.adoc
+++ b/modules/administration/pages/icinga.adoc
@@ -2,7 +2,9 @@
 = Monitoring with Icinga
 
 
-
+////
+I sent a message to the suse manager ML 2019-05-16 asking about Icinga and have received exactly nothing back. I think we can probably silently drop it from the 4.0 nav. It'll still exist in the older docs, and I won't delete the actual file just yet, in case someone yells at us. LKB - 2019-05-20
+////
 
 
 
