--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -11,9 +11,7 @@ ifndef::backend-pdf[]
 *** xref:live-patching-sles15.adoc[Live Patching on SLES 15]
 *** xref:live-patching-sles12.adoc[Live Patching on SLES 12]
 // Monitoring
-** xref:monitoring.adoc[Monitoring]
-*** xref:prometheus.adoc[Prometheus]
-*** xref:icinga.adoc[Icinga]
+** xref:prometheus.adoc[Prometheus]
 // Containers
 ** xref:kubernetes.adoc[Kubernetes]
 // Virtualization.
@@ -79,7 +77,7 @@ include::modules/administration/pages/live-patching-sles15.adoc[leveloffset=+2]
 include::modules/administration/pages/live-patching-sles12.adoc[leveloffset=+2]
 
 // Monitoring
-include::modules/administration/pages/icinga.adoc[leveloffset=+1]
+include::modules/administration/pages/prometheus.adoc[leveloffset=+1]
 
 // Containers
 include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
