--- a/adoc/advanced_topics_optimization_scalability.adoc
+++ b/adoc/advanced_topics_optimization_scalability.adoc
@@ -194,7 +194,7 @@ Click menu:Admin[Task Schedules], then the btn:[compare-configs-default] link, t
 ** Disable hourly synchronization of Cobbler files.
 Click menu:Admin[Task Schedules], then the btn:[cobbler-sync-default] link, then the btn:[Disable Schedule] button and finally btn:[Delete Schedule].
 ** Disable daily run of Gatherer and Subscription Matcher.
-Click on menu:Admin[Task Schedules], then on the btn:[gatherer-matcher-default] link, then on the btn:[Disable Schedule] button and finally on btn:[Delete Schedule].
+Click menu:Admin[Task Schedules], then the btn:[gatherer-matcher-default] link, then the btn:[Disable Schedule] button and finally btn:[Delete Schedule].
 
 Note that increasing the number of Postgres connections will require more RAM, make sure the {productname} server is monitored and swap is never used.
 
