mention "Migration complete." notification and comment script output

--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -122,7 +122,7 @@ The temporary SSH key will be deleted after successful migration.
 Ideally, this is all you will need to do.
 
 Depending on the size of the installation, the actual migration will take up to several hours.
-When finished, you will be prompted to shut down the source machine, re-configure the network of the target machine to use the same IP address and host name as the original machine and restart it.
+When successfully finished, you will be notified ("_Migration complete._") and prompted to shut down the source machine, re-configure the network of the target machine to use the same IP address and host name as the original machine and restart it.
 It should now be a fully functional replacement for your previous {productname} 3.2  installation.
 
 The following numbers illustrate the runtime for dumping and importing a small database:
@@ -235,7 +235,9 @@ MANAGER_DB_NAME='susemanager'
 
 
 
-// FIXME: 2019-05-016, ke: replace it with version 4 output
+// FIXME: 2019-05-16, ke: replace it with version 4 output
+// 2019-05-20, ke: Commented on dev request
+////
 [[bp.sec.mgr.migration.example]]
 == Example Session
 
@@ -444,3 +446,4 @@ Password:
   rebooting the new server!
   ============================================================================
 ----
+////
