updated release notes

--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -38,15 +38,15 @@ There are far too many changes to include in the following list but these suffic
 * General editing and clean-up on many documents
 
 
+
 === Known Issues in {revnumber}
 
 xref-converter.rb::
-The converter still requires refactoring as several links are incorrectly transforming during PDF conversion.
+The converter still requires refactoring there are a few cross document links that are incorrectly transforming during PDF conversion.
 
 xrefs::
 Though all other xrefs in the Reference Manual have been updated the *Systems* and *User* tabs remain for *GMC*.
 Books other than reference will be updated for *GMC*
-
 
 
 
