more line-up with the suma wiki

--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -3,7 +3,6 @@
 
 
 
-
 The migration from {productname} 3.2 to {productname} 4 works in the same way as the migration from {productname} 2.1 to {productname} 3.
 The migration happens from the original machine to a new one.
 There is no in-place migration.
@@ -14,7 +13,6 @@ While this has the drawback that you temporarily need two machines, it also has 
 ====
 The whole process may be tricky, so it is strongly advised that the migration is done by an experienced consultant.
 ====
-
 
 Given the complexity of the product, the migration is an "`all-or-nothing`" procedure{mdash}if something goes wrong you will need to start all over.
 Error handling is very limited.
@@ -68,17 +66,15 @@ The dump will be written to the directory [path]``/var/spacewalk/tmp``, the dire
 If you want the dump to be stored somewhere else, change the definition of the variable [var]``$TMPDIR`` on the beginning of the script to suit your needs.
 ====
 
-
-
 [[bp.sec.mgr.migration.setup.target]]
-== Setup the Target Machine
+== Setting Up the Target Machine
 
 
 To prepare the target machine (with the example host name ``suma40``) proceed as follows:
 
 [[proc.mgr.migration.setup.target]]
 .Procedure: Setup Target Machine
-. On the target machine install "`{productname}`" Server with the Unified Installer ({sle} 15 SP1).
+. On the target machine install "`{productname}`" Server 4.0 with the Unified Installer ({sle} 15 SP1).
 +
 For more information about installing {productname}, see <<install-server-unified>>.
 . Initiate [command]``yast2 susemanagersetup`` as you would normally do for a setup of {productname}.
@@ -125,7 +121,7 @@ Depending on the size of the installation, the actual migration will take up to 
 When successfully finished, you will be notified ("_Migration complete._") and prompted to shut down the source machine, re-configure the network of the target machine to use the same IP address and host name as the original machine and restart it.
 It should now be a fully functional replacement for your previous {productname} 3.2  installation.
 
-The following numbers illustrate the runtime for dumping and importing a small database:
+The following numbers illustrate the runtime for dumping and importing the database:
 
 ----
 14:53:37   Dumping remote database to /var/spacewalk/tmp/susemanager.dmp.gz on target system. Please wait...
@@ -220,7 +216,7 @@ Output can lead to a corrupted transfer of the archive with the database dump. R
 
 === Retrying to Set Up the New Server
 
-To retry setting up the new server, perform the following step on the new server machine:
+To retry setting up the new server, perform the following steps on the new server machine:
 
 . remove /root/.MANAGER_SETUP_COMPLETE
 . stop postgresql and remove /var/lib/pgsql/data
