Updates per feedback

--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -78,7 +78,13 @@ or:
 . Stop osad with:
 +
 ----
-# /etc/init.d/mgr-osad stop
+# /etc/init.d/osad stop
+----
++
+or:
++
+----
+# service mgr-osad stop
 ----
 +
 or:
