--- a/modules/architecture/pages/osad.adoc
+++ b/modules/architecture/pages/osad.adoc
@@ -15,13 +15,13 @@
 
 
 
-== mgr-osad --help
+== osad --help
 
 The following options are available for use with *osad* on your legacy clients:
 
 ----
-mgr-osad --help
-Usage: mgr-osad [options]
+osad --help
+Usage: osad [options]
 
 Options:
   -v, --verbose         Increase verbosity
@@ -41,5 +41,5 @@ Options:
 _Logs for *osad* are located in:_
 
 ----
-/var/log/mgr-osad
+/var/log/osad
 ----
