--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -75,9 +75,9 @@ yum -y install yum-rhn-plugin rhn-setup
 mv /etc/yum.repos.d/Cent* /root/
 yum clean all
 chkconfig rhnsd on
-chkconfig mgr-osad on
+chkconfig osad on
 service rhnsd restart
-service mgr-osad restart
+service osad restart
 ----
 . Continue by following normal bootstrap procedures to bootstrap the new client.
 
