--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -50,7 +50,7 @@ This table gives an overview of required ports, to be used when you are setting 
 | 443  | TCP      | HTTPS, used for {webui}, client, Proxy server, and API traffic
 | 4505 | TCP      | Salt, used by the Salt-master to accept communication requests from minions
 | 4506 | TCP      | Salt, used by the Salt-master to accept communication requests from minions
-| 5222 | TCP      | XMPP client, used for communications with the [systemitem]``mgr-osad`` daemon on traditional client systems
+| 5222 | TCP      | XMPP client, used for communications with the [systemitem]``osad`` daemon on traditional client systems
 | 5269 | TCP      | XMPP server, used for pushing actions to {susemgrproxy}
 |===
 
