--- a/modules/installation/pages/ports.adoc
+++ b/modules/installation/pages/ports.adoc
@@ -51,7 +51,7 @@ Outbound / TCP / HTTPS
 Inbound / TCP / osad
 +
 
-When you wish to push actions to clients this port is required by the [systemitem]``mgr-osad`` daemon running on your client systems.
+When you wish to push actions to clients this port is required by the [systemitem]``osad`` daemon running on your client systems.
 
 5269::
 Inbound/Outbound / TCP / jabberd
@@ -175,7 +175,7 @@ Used to reach {productname}.
 Inbound / TCP
 +
 
-For push actions and connections issued by [systemitem]``mgr-osad`` running on the client systems.
+For push actions and connections issued by [systemitem]``osad`` running on the client systems.
 
 5269::
 Inbound/Outbound / TCP
