--- a/modules/reference/pages/audit/audit-openscap-overview.adoc
+++ b/modules/reference/pages/audit/audit-openscap-overview.adoc
@@ -117,7 +117,7 @@ Run the [command]``mgr_check`` command to ensure the action is being picked up b
 mgr_check -vv
 ----
 +
-NOTE: If the {productname} daemon ([command]``rhnsd``) or [command]``mgr-osad`` are running on the client system, the action will be picked up by these services.
+NOTE: If the {productname} daemon ([command]``rhnsd``) or [command]``osad`` are running on the client system, the action will be picked up by these services.
 To check if they are running, use:
 
 ----
@@ -127,7 +127,7 @@ service rhnsd start
 or
 
 ----
-service mgr-osad start
+service osad start
 ----
 +
 
@@ -165,7 +165,7 @@ Where:
 mgr_check -vv
 ----
 +
-If the {productname} daemon ([command]``rhnsd``) or [command]``mgr-osad`` are running on the client system, the action will be picked up by these services.
+If the {productname} daemon ([command]``rhnsd``) or [command]``osad`` are running on the client system, the action will be picked up by these services.
 To check if they are running, use:
 +
 
@@ -177,7 +177,7 @@ or
 +
 
 ----
-service mgr-osad start
+service osad start
 ----
 
 
