--- a/modules/reference/pages/systems/system-details.adoc
+++ b/modules/reference/pages/systems/system-details.adoc
@@ -185,7 +185,7 @@ Contact Method::
 Available methods: Default (Pull), Push via SSH, and Push via SSH tunnel.
 +
 
-The so-called OSA status is also displayed for client systems registered with {productname} that have the OSA dispatcher (mgr-osad) configured.
+The so-called OSA status is also displayed for client systems registered with {productname} that have the OSA dispatcher (osad) configured.
 +
 
 Push enables {productname} customers to immediately initiate tasks rather than wait for those systems to check in with {productname}.
