--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -332,7 +332,7 @@ Salt 2019.2.0 or later is required on the virtual host in order for the salt-bas
 ==== {vmhost} setup on Traditional clients
 
 
-Once the registration process is finished and all packages have been installed, enable the [daemon]``mgr-osad`` (Open Source Architecture Daemon).
+Once the registration process is finished and all packages have been installed, enable [daemon]``osad`` (open source architecture daemon).
 On a {sls} system this can be achieved by running the following commands as user {rootuser}:
 
 
@@ -343,17 +343,16 @@ systemctl disable rhnsd
 
 
 ----
-systemctl enable mgr-osad
-systemctl start mgr-osad
+systemctl enable osad
+systemctl start osad
 ----
 
 .[daemon]``mgr-osad``Together with [daemon]``rhnsd``
 IMPORTANT: The [daemon]``rhnsd`` daemon checks for scheduled actions every four hours, so it can take up to four hours before a scheduled action is carried out.
 If many clients are registered with {productname}, this long interval ensures a certain level of load balancing since not all clients act on a scheduled action at the same time.
 
-However, when managing {vmguest}s, you usually want actions like rebooting a {vmguest} to be carried out immediately.
-Adding [daemon]``mgr-osad`` ensures that.
-The [daemon]``mgr-osad`` daemon receives commands over the jabber protocol from {productname} and commands are instantly executed.
+However, when managing {vmguest}s, you usually want actions like rebooting a {vmguest} to be carried out immediately, which can be done by adding [daemon]``osad``.
+The [daemon]``osad`` daemon receives commands over the jabber protocol from {productname} and commands are instantly executed.
 Alternatively you may schedule actions to be carried out at a fixed time in the future (whereas with [daemon]``rhnsd`` you can only schedule for a time in the future plus up to four hours).
 
 
