--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -9,15 +9,18 @@ ifndef::backend-pdf[]
 *** xref:retail-install-unified.adoc[Installing with the Unified Installer]
 *** xref:retail-install-packages.adoc[Installing from Packages]
 *** xref:retail-install-setup.adoc[Setting up]
+*** xref:retail-deploy-terminals.adoc[Deploying POS Terminals]
 // Admin
-** xref:retail-formulas.adoc[Formulas]
 ** xref:retail-admin.adoc[Administration]
-** xref:retail-delta-images.adoc[Delta Images]
-** xref:retail-next.adoc[What Next?]
+*** xref:retail-formulas.adoc[Formulas]
+*** xref:retail-delta-images.adoc[Delta Images]
+*** xref:retail-mass-config.adoc[Mass Configuration]
 // Retail Upgrade
 ** xref:retail-migration-intro.adoc[Retail Upgrade]
 *** xref:retail-prepare-migration.adoc[Prepare for Migration]
 *** xref:retail-migration-slepostosuma.adoc[Migrate SLEPOS to SUMA]
+// End matter
+** xref:retail-next.adoc[What Next?]
 ** xref:common_gfdl1.2_i.adoc[License]
 
 endif::[]
@@ -48,14 +51,16 @@ include::modules/retail/pages/retail-install-packages.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-install-setup.adoc[leveloffset=+3]
 
-// Admin
-include::modules/retail/pages/retail-formulas.adoc[leveloffset=+2]
+include::modules/retail/pages/retail-deploy-terminals.adoc[leveloffset=+3]
 
+// Admin
 include::modules/retail/pages/retail-admin.adoc[leveloffset=+2]
 
-include::modules/retail/pages/retail-delta-images.adoc[leveloffset=+2]
+include::modules/retail/pages/retail-formulas.adoc[leveloffset=+3]
 
-include::modules/retail/pages/retail-next.adoc[leveloffset=+2]
+include::modules/retail/pages/retail-delta-images.adoc[leveloffset=+3]
+
+include::modules/retail/pages/retail-mass-config.adoc[leveloffset=+2]
 
 // Retail Upgrade
 include::modules/retail/pages/retail-migration-intro.adoc[leveloffset=+1]
@@ -63,5 +68,10 @@ include::modules/retail/pages/retail-migration-intro.adoc[leveloffset=+1]
 include::modules/retail/pages/retail-prepare-migration.adoc[leveloffset=+2]
 
 include::modules/retail/pages/retail-migration-slepostosuma.adoc[leveloffset=+2]
+
+//End matter
+include::modules/retail/pages/retail-next.adoc[leveloffset=+2]
+
+include::modules/retail/pages/common_gfdl1.2_i.adoc[eveloffset=+2]
 
 endif::[]
