--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -38,7 +38,8 @@ Before starting the migration process, make sure that the machine is up to date 
 ====
 
 During migration the database from the source machine needs to get dumped and this dump needs to be temporarily stored on the target system.
-The dump gets compressed with [command]``gzip`` using the default compression options (maximum compression only yields about 10 % of space savings but costs a lot of runtime); so check the disk usage of the database with:
+The dump gets compressed with [command]``gzip`` using the default compression options (maximum compression only yields about 10% of space savings but costs a lot of runtime).
+Check the disk usage of the database with:
 
 ----
 {prompt.root}du -sch /var/lib/pgsql/data
