--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -14,7 +14,7 @@ While this has the drawback that you temporarily need two machines, it also has 
 The whole process may be tricky, so it is strongly advised that the migration is done by an experienced consultant.
 ====
 
-Given the complexity of the product, the migration is an "`all-or-nothing`" procedure{mdash}if something goes wrong you will need to start all over.
+Given the complexity of the product, the migration is an "all or nothing" procedure, so if something goes wrong you will need to start over.
 Error handling is very limited.
 Nevertheless it should work more or less out of the box if all the steps are carefully executed as documented.
 
