--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -16,7 +16,7 @@ The whole process may be tricky, so it is strongly advised that the migration is
 
 Given the complexity of the product, the migration is an "all or nothing" procedure, so if something goes wrong you will need to start over.
 Error handling is very limited.
-Nevertheless it should work more or less out of the box if all the steps are carefully executed as documented.
+Nevertheless, it should work correctly if you follow these instructions carefully.
 
 .Time-Consuming Operation
 [NOTE]
