--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -22,7 +22,8 @@ Nevertheless, it should work correctly if you follow these instructions carefull
 [NOTE]
 ====
 The migration involves dumping the whole database on the source machine and restoring it on the target machine.
-Also all of the channels and packages need to be copied to the new machine, so expect the whole migration to take several hours.
+All of the channels and packages then need to be copied to the new machine.
+You should expect the entire process to take several hours.
 ====
 
 
