--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -46,7 +46,7 @@ Check the disk usage of the database with:
 {prompt.root}du -sch /var/lib/pgsql/data
 ----
 
-Then ensure that you have at least 30 % of this value available in [path]``/var/spacewalk/tmp``.
+Ensure that you have at least 30% of this value available in [path]``/var/spacewalk/tmp``.
 
 These values from a test migration should aid in illustrating space requirements:
 
