--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -177,7 +177,7 @@ Edit the script located in [path]``/usr/lib/susemanager/bin/mgr-setup`` and remo
 Make sure your external storage is mounted on the new machine before starting the system for the first time.
 Analogue handling for [path]``/srv/www/htdocs/pub`` if appropriate.
 
-In general, all needed files and directories, not copied by the migration tool, should be copied to the new server manually.
+All other required files and directories that have not been copied by the migration tool, should be manually copied to the new server.
 ====
 
 
