--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -185,7 +185,7 @@ All other required files and directories that have not been copied by the migrat
 [[bp.sec.mgr.migration.trouble]]
 == Troubleshooting
 
-=== Broken {webui} after Migration
+=== {webui} Fails to Load
 
 It is possible that the {webui} may break during migration.
 This behavior is not a bug, but a browser caching issue.
