--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -184,7 +184,7 @@ All other required files and directories that have not been copied by the migrat
 
 [[bp.sec.mgr.migration.trouble]]
 == Troubleshooting
-
+This section describes some common problems found after migration.
 === {webui} Fails to Load
 
 It is possible that the {webui} may break during migration.
