--- a/modules/ROOT/pages/index-uyuni.adoc
+++ b/modules/ROOT/pages/index-uyuni.adoc
@@ -27,7 +27,7 @@ The following documentation is available for {productname} version {productnumbe
 | Upgrade Guide                 | xref:upgrade:upgrade-overview.adoc[HTML] link:../../pdf/uyuni_upgrade_guide.pdf[PDF]
 | Reference Guide               | xref:reference:intro.adoc[HTML] link:../../pdf/uyuni_reference_manual.pdf[PDF]
 | Administration Guide          | xref:administration:intro.adoc[HTML] link:../../pdf/uyuni_administration_guide.pdf[PDF]
-| Salt Guide                    | xref:salt:intro.adoc[HTML] link:../../pdf/uyuni_salt_guide.pdf[PDF]
+| Salt Guide                    | xref:salt:salt-intro.adoc[HTML] link:../../pdf/uyuni_salt_guide.pdf[PDF]
 | Retail Guide                  | xref:retail:retail-introduction.adoc[HTML] link:../../pdf/uyuni_retail_guide.pdf[PDF]
 | Architecture                  | xref:architecture:architecture-intro.adoc[HTML] link:../../pdf/uyuni_architecture.pdf[PDF]
 |===
