--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -12,7 +12,7 @@ include::ROOT:partial$entities.adoc[]
 
 == Beta 3 Changes
 
-Our focus for SUSE Manager {productnumber} was to finish shifting the sources from our old IA (Information Architecture) into our new one. The Reference, Installation and Administration guides are now close to where we like them to be.
+Our focus for {productname} {productnumber} was to finish shifting the sources from our old IA (Information Architecture) into our new one. The Reference, Installation and Administration guides are now close to where we like them to be.
 
 There are far too many changes to include in the following list but these sufficiently represent the larger changes.
 
