--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -4,7 +4,8 @@ include::ROOT:partial$entities.adoc[]
 :revnumber: RC1
 :revdate: May 15, 2019
 
-
+// !!!CHANGE THIS FILE ON THE MASTER BRANCH ONLY BEFORE PUBLISHING A RELEASE BRANCH!!!
+// Otherwise this file is out of sync with our develop/master branch
 
 == Latest Changes
 
