--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -1,10 +1,10 @@
 [[retail.deploy_terminals]]
-= Deploying terminals
+= Deploying Terminals
 
-For hardware requirements, see xref:retail_chap_components.adoc#retail.sect.components.pos-terminals[Point-of-Service Terminals].
+For hardware requirements, see xref:modules/retail/pages/retail-requirements.adoc[].
 
-Before terminals can be deployed, ensure you have prepared a saltboot based OS image.
-For how to build OS images, see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-advanced-topics/html/book.suma.advanced.topics/at.images.html#at.images.kiwi.
+Before terminals can be deployed, ensure you have prepared a Saltboot-based operating system image.
+For how to build OS images, see xref:modules/administration/pages/image-management.adoc[Administration Guide - Image Management].
 
 Each terminal requires a specific hardware type, which contains information about the product name and terminal manufacturer.
 However, the {susemgr} database does not have this information to begin with.
