--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -347,7 +347,7 @@ systemctl enable osad
 systemctl start osad
 ----
 
-.[daemon]``mgr-osad``Together with [daemon]``rhnsd``
+.Using [daemon]``osad`` with [daemon]``rhnsd``
 IMPORTANT: The [daemon]``rhnsd`` daemon checks for scheduled actions every four hours, so it can take up to four hours before a scheduled action is carried out.
 If many clients are registered with {productname}, this long interval ensures a certain level of load balancing since not all clients act on a scheduled action at the same time.
 
