--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -160,8 +160,6 @@ Use this autoinstallation profile as an example.
 
 === Running the In-place Upgrade
 
-
-
 .Procedure
 . In the {webui}, upload the edited autoinstallation profile to your {productname} server.
 . In the [guimenu]``Kernel Options`` field, enter the following value:
@@ -178,7 +176,7 @@ The system will download the needed files, change the bootloader entries, reboot
 
 
 
-=== Cleanup
+=== Cleaning Up After the In-place Upgrade
 
 After the proxy has completed the automatic upgrade process, it still will have the old channels from SUSE Manager assigned.
 So in case updates are reported for the proxy, do not apply them.
