more adoc markup

--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -33,7 +33,7 @@ Proxies that are Salt minions cannot be migrated to the new version this way.
 
 .Procedure: Preparation
 . First you need to create an autoinstallable distribution based on SLE 15 SP1 because the SUSE Manager Proxy 4 product is based on this version.
-For creating an autoinstallable distribution, see xref:#ref.webui.systems.autoinst.distribution.
+For creating an autoinstallable distribution, see xref:#ref.webui.systems.autoinst.distribution (menu:Main Navigation[Systems > Autoinstallation > Distributions]).
 . Create an autoinstallation profile.
 For more information, see xref:#proxy-migration-inplace-profile.
 In the following template example the label [literal]``proxy4`` is used for both the autoinstallable distribution and for the autoinstall profile.
@@ -161,7 +161,7 @@ Use this autoinstallation profile as an example.
 === Running the In-place Upgrade
 
 .Procedure
-. In the {webui}, upload the edited autoinstallation profile to your {productname} server.
+. In the {webui}, upload the edited autoinstallation profile to your {productname} server (menu:Main Navigation[Systems > Autoinstallation > Profiles]).
 . In the [guimenu]``Kernel Options`` field, enter the following value:
 +
 ----
@@ -170,8 +170,8 @@ autoupgrade=1 Y2DEBUG=1
 +
 The debug setting is not required but can help investigating problems in case something goes wrong.
 The [literal]``autoupgrade` parameter however is mandatory.
-. Select the proxy from the system list in SUSE Manager, click Provisioning and select the profile just created.
-. Click start autoinstallation.
+. Select the proxy from the system list in SUSE Manager, click the [guimenu]``Provisioning`` tab and select the profile just created.
+. Click btn:[Start Autoinstallation].
 The system will download the needed files, change the bootloader entries, reboot and will start the automatic upgrade.
 
 
