--- a/modules/reference/pages/systems/system-details/sd-virtualization.adoc
+++ b/modules/reference/pages/systems/system-details/sd-virtualization.adoc
@@ -108,7 +108,7 @@ This password is the Spice or VNC one.
 
 // TODO Add a screenshot of the graphical console
 
-For the Spice display to be adjusted to the window, the spice VD agent needs to be installed within the virtual machine.
+For the Spice display to be adjusted to the window, the Spice VD agent needs to be installed within the virtual machine.
 
 
 [[sd-virtualization-deployment-management]]
