--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -12,7 +12,7 @@ To upgrade the SP version on SLE{nbsp}12 (for example, upgrading from SLE{nbsp}1
 
 The recommended order for migrations is to first migrate the {productname} server and then the proxies.
 
-.Using SUSE Manager proxy 3.2 with SUSE Manager 4
+.Using {productname} Proxy 3.2 with {productname} 4
 [NOTE]
 ====
 A SUSE Manager proxy 3.2 cooperates just fine with a new SUSE Manager 4. After the server has been migrated to version 4, proxies can be autoupgraded from the SUSE Manager server with YaST autoinstallation.
