--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -15,7 +15,8 @@ The recommended order for migrations is to first migrate the {productname} serve
 .Using {productname} Proxy 3.2 with {productname} 4
 [NOTE]
 ====
-A SUSE Manager proxy 3.2 cooperates just fine with a new SUSE Manager 4. After the server has been migrated to version 4, proxies can be autoupgraded from the SUSE Manager server with YaST autoinstallation.
+{productname} Proxy 3.2 is compatible with {productname} Server 4. 
+After the server has been migrated to version 4, proxies can be automatically upgraded from the SUSE Manager server using YaST autoinstallation.
 ====
 
 Right now, migrating SUSE Manager proxies 3.2 only works for proxies that have been registered as traditional clients.
