--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -19,7 +19,7 @@ The recommended order for migrations is to first migrate the {productname} serve
 After the server has been migrated to version 4, proxies can be automatically upgraded from the SUSE Manager server using YaST autoinstallation.
 ====
 
-Right now, migrating SUSE Manager proxies 3.2 only works for proxies that have been registered as traditional clients.
+Migrating {productname} Proxy 3.2 only works for proxies that have been registered as traditional clients.
 Proxies that are Salt minions cannot be migrated to the new version this way.
 
 
