--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -171,7 +171,7 @@ autoupgrade=1 Y2DEBUG=1
 +
 The debug setting is not required but can help investigating problems in case something goes wrong.
 The [literal]``autoupgrade` parameter however is mandatory.
-. Select the proxy from the system list in SUSE Manager, click the [guimenu]``Provisioning`` tab and select the profile just created.
+. Select the proxy from the system list in {productname}, click the [guimenu]``Provisioning`` tab, and select the profile you created earlier.
 . Click btn:[Start Autoinstallation].
 The system will download the needed files, change the bootloader entries, reboot and will start the automatic upgrade.
 
