testing xref format

--- a/modules/reference/pages/admin/bootstrap-script.adoc
+++ b/modules/reference/pages/admin/bootstrap-script.adoc
@@ -29,8 +29,8 @@ Location and name of the SSL certificate (pre-populated).
 Bootstrap using Salt::
 To bootstrap traditional clients, uncheck menu:Client Bootstrap Script Configuration[Bootstrap using Salt].
 
-Refer to xref:client-configuration:registration-bootstrap.adoc[Registering Clients with a Bootstrap Script] for more information.
-
+Refer to xref:client-configuration:registration-bootstrap.adoc[] for more information.
+//Registering Clients with a Bootstrap Script
 Enable SSL::
 It is advised keeping SSL enabled.
 If enabled the corporate public CA certificate will be installed on the client.
